
syntax = "proto3";

package grpc;

option java_package = "com.lichee.grpc.example.proto";
option java_outer_classname = "StudentProto";
option java_multiple_files = true;

message HttpRequest {
    string username = 1;
}

message HttpResponse {
    string realname = 2;
}

service StudentService {
    rpc getRealnameByUsername (HttpRequest) returns (HttpResponse) {}
}